<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake product data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new product  -->
    <string name="editor_activity_title_new_product">Add A New Product</string>

    <!-- Label for editor menu option to save product and leave editor -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor -->
    <string name="name">Product Info</string>

    <!-- Label for condition information in the editor -->
    <string name="product_condition">Condition</string>

    <!-- Label for measurement information in the editor -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for name field in the editor  -->
    <string name="hint_product_name">Product name</string>

    <!-- Text hint for model field in the editor  -->
    <string name="hint_product_model">Model</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_product_quantity">How many?</string>

    <!-- Units for weight of the product (kilograms) -->
    <string name="unit_product_quantity">units</string>

    <!-- Label for dropdown menu option if the product's condition is unknown  -->
    <string name="condition_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the product is male -->
    <string name="condition_new">New</string>

    <!-- Label for dropdown menu option if the product is female -->
    <string name="condition_used">Used</string>

    <!-- Toast message in editor when new product has been successfully inserted -->
    <string name="editor_insert_product_successful">Item saved</string>

    <!-- Toast message in editor when new product has failed to be inserted -->
    <string name="editor_insert_product_failed">Error with saving item</string>

    <!-- Title text for the empty view, which describes the empty dog house image -->
    <string name="empty_view_title_text">No products added yet!</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product -->
    <string name="empty_view_subtitle_text">Get started by adding product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when current product was successfully updated  -->
    <string name="editor_update_product_successful">Item updated</string>

    <!-- Toast message in editor when current product has failed to be updated -->
    <string name="editor_update_product_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog">Do you want to quit without saving changes?</string>

    <!-- Dialog button text for the option to discard a user's changes  -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product  -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Item deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted  -->
    <string name="editor_delete_product_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current product  -->
    <string name="delete_dialog">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current product  -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product  -->
    <string name="cancel">Cancel</string>

    <!-- Label for the product's model if the model is unknown -->
    <string name="unknown_model">Unknown model</string>

    <!-- Label for the product's photo -->
    <string name="product_photo">Photo</string>

    <!-- Label for the product's supplier -->
    <string name="supplier">Supplier</string>

    <!-- Hint for the supplier's name -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Hint for the supplier's e-mail -->
    <string name="hint_email_supplier">supplier@gmail.com</string>

    <!-- Currency symbol for the price field -->
    <string name="currency_symbol">$</string>

    <!-- Hint for the price field -->
    <string name="price_hint_editor_activity">Ex. $250.00</string>

    <!-- Label hint for the add photo section. Visible if new product -->
    <string name="add_photo_hint_text">Tap to add a photo</string>

    <!-- Label hint for the add photo section. Visible if product is editing -->
    <string name="edit_photo_hint_text">Tap to change a photo</string>

    <!-- Type of files which can be selected -->
    <string name="intent_type">image/*</string>

    <!-- Label hint for the add photo section. Visible if new product -->
    <string name="select_image">Select image</string>

    <!-- Validation of product name field -->
    <string name="validation_product_name">Don\'t forget to add a product name!</string>

    <!-- Validation of product quantity -->
    <string name="validation_product_quantity">Don\'t forget to add a quantity!</string>

    <!-- Validation of product price -->
    <string name="validation_product_price">Don\'t forget to add a price!</string>

    <!-- Validation of product image -->
    <string name="validation_product_image">Don\'t forget to add an image!</string>

    <!-- Validation of product quantity -->
    <string name="error_msg_stock_update">Issue with upload value of quantity</string>

    <!-- Toast message about sold item -->
    <string name="buy_msg_confirm">Item has been sold</string>

    <!-- Validation of missing product in stock -->
    <string name="no_product_in_stock">No product left in stock</string>

    <!-- Label for stock -->
    <string name="quantity_list_label">Quantity:</string>

    <!-- Label for unit -->
    <string name="unit">items</string>

    <!-- Label for stock -->
    <string name="currency_sign">$</string>

    <!-- Dummy data: price of item -->
    <string name="dummy_data_item_price">250.00</string>

    <!-- Dummy data: quantity of item -->
    <string name="example_quantity">25</string>

    <!-- Dummy data: name of item -->
    <string name="dummy_data_name">PlayStation 4</string>

    <!-- Dummy data: model of item -->
    <string name="dummy_data_model">CUH-1001A</string>

    <!-- Dummy data: supplier e-mail -->
    <string name="dummy_data_supplier_email">sonyIsTheBest@gmail.com</string>

    <!-- Dummy data: supplier name -->
    <string name="dummy_data_supplier_name">Daniel Sony Davis</string>

    <!--Out of stock toast message-->
    <string name="toast_out_of_stock">Product is out of stock!</string>

    <!--Add image hint-->
    <string name="add_image_hint">Click to add a photo</string>

    <!--Model Number Input Hint-->
    <string name="model_number_hint">Model Number</string>

    <!--Description for empty box image-->
    <string name="empty_box_image_description">Empty Box</string>

    <!--Order More In Menu-->
    <string name="order_more_menu">Order More…</string>
</resources>

