<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_box_image"
            style="@style/EmptyViewStyle"
            android:contentDescription="@string/empty_box_image_description"
            android:src="@drawable/empty_box" />

        <TextView
            android:id="@+id/empty_title_text"
            style="@style/EmptyViewStyle"
            android:layout_below="@+id/empty_box_image"
            android:paddingTop="16dp"
            android:text="@string/empty_view_title_text"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            style="@style/EmptyViewStyle"
            android:layout_below="@+id/empty_title_text"
            android:paddingTop="8dp"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondaryTextColor" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FabStyle"
        android:src="@drawable/ic_add_circle" />

</RelativeLayout>
